--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -558,8 +558,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="3dp"
-        >
+        android:layout_marginBottom="3dp">
 
     <Button
         android:id="@+id/button2"
@@ -573,13 +572,14 @@
 
         <Button
             android:id="@+id/ChekOut"
-            android:layout_width="180dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginEnd="15dp"
             android:layout_centerInParent="true"
             android:onClick="Chek_1"
-            android:background="@drawable/tamplatetwo" />
+            android:textColor="@color/black"
+            android:background="@drawable/innwords" />
     <Button
         android:id="@+id/progress"
         android:layout_width="40dp"
