--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -346,13 +346,14 @@
     <RelativeLayout
         android:id="@+id/chars_layout"
         android:layout_width="wrap_content"
-        android:layout_height="49dp"
+        android:layout_height="wrap_content"
         android:layout_above="@id/engine_buttons"
 
         android:layout_centerHorizontal="true"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="1dp">
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp">
 
 
         <TextView
@@ -557,10 +558,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="3dp">
+        android:layout_marginBottom="5dp">
+
+
+
+
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/resetWord"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="5dp"
@@ -574,8 +579,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
-
-            android:layout_centerInParent="true"
+            android:layout_marginBottom="3dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:onClick="Chek_1"
             android:textColor="@color/black"
             android:background="@drawable/innwords" />
